# Mantle-Alpha-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Procfile  README.md  alembic.ini  dev.db-journal  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
backend/: __init__.py  config.py  main.py  run_all.py  worker.py
backend/ai/: __init__.py  insights.py  intent.py  llm_provider.py
backend/alerts/: __init__.py  engine.py  matching.py  onchain_logger.py  service.py
backend/api/: __init__.py  dependencies.py  schemas.py
backend/api/routes/: alerts.py  health.py  history.py  (+1 more)
backend/blockchain/: __init__.py  abi.py  client.py  events.py  monitor.py  whale.py
backend/bot/: __init__.py  formatters.py  handlers.py  telegram_bot.py
backend/core/: __init__.py  domain.py  logging.py  security.py  types.py
backend/database/: __init__.py  models.py  repositories.py  session.py
backend/pricing/: __init__.py  cache.py  providers.py  service.py
backend/tasks/: __init__.py  celery_app.py  monitoring_tasks.py
contracts/: .env.example  .gitignore  AlertLogger.sol  README.md  hardhat.config.js  package.json
contracts/scripts/: deploy.js  verify.js
contracts/test/: AlertLogger.test.js
docker/: Dockerfile
docs/: DEPLOYMENT.md  DEPLOY_RAILWAY.md  DEPLOY_RENDER.md  LOCAL_SETUP.md
tests/: conftest.py  test_alert_engine.py  test_api.py  test_database.py  test_events.py  test_formatters.py  test_intent.py  test_pricing.py  test_security.py  test_whale.py
